# CMakeBB

./: .gitignore  CMakeLists.txt  TODO.txt  execute.sh  include.sh  readme.md
inc/: config.h.in
lib/: CMakeLists.txt
lib/adder/: CMakeLists.txt  adder.c  adder.h
lib/sampleadder/: CMakeLists.txt  sampleadder.cpp  sampleadder.h
lib/samplecombinatorics/: CMakeLists.txt  samplecombinatorics.cpp  samplecombinatorics.h
lib/samplelib/: CMakeLists.txt  samplelib.cpp  samplelib.h
scripts/: configure.sh  readme.md
src/: AdderTests.cpp  SampleLibTests.cpp  config.h.in  main.c  main.cpp
tests/: sampleadder_tests.cpp  samplecombinatorics_tests.cpp
